authentik/outpost/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: &app homekube-outpost
    app.kubernetes.io/managed-by: goauthentik.io
    app.kubernetes.io/name: authentik-proxy
    app.kubernetes.io/version: 2024.12.2
  name: authentik-outpost
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: *app
      app.kubernetes.io/managed-by: goauthentik.io
      app.kubernetes.io/name: authentik-proxy
      app.kubernetes.io/version: 2024.12.2
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: *app
        app.kubernetes.io/managed-by: goauthentik.io
        app.kubernetes.io/name: authentik-proxy
        app.kubernetes.io/version: 2024.12.2
    spec:
      containers:
        - name: authproxy
          image: ${SECRET_HARBOR_URL}/authentik-proxy:latest
          ports:
            - containerPort: 9000
              name: http
              protocol: TCP
            - containerPort: 9443
              name: https
              protocol: TCP
          resources: {}
