authentik/outpost/base/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-outpost
  annotations:
    kubernetes.io/ingress.class: traefik-external
  labels:
    app.kubernetes.io/instance: homekube-outpost
    app.kubernetes.io/managed-by: goauthentik.io
    app.kubernetes.io/name: authentik-proxy
    app.kubernetes.io/version: 2024.12.2
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`auth.${SECRET_DOMAIN_0}`)"
      kind: Rule
      services:
        - name: authentik-outpost
          port: 80
  tls: {}
